force-app/main/default/objects/Opps_Reporting_Snapshot__c/Opps_Reporting_Snapshot__c.object-meta.xml
<CustomObject>
    <description>Opportunity Data to be used for Opportunity Reporting Snapshot.</description>
    <label>Opps_Reporting_Snapshot</label>
    <nameField>
        <label>Opps_Reporting_Shapshot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opps_Reporting_Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>