force-app/main/default/objects/Opps_Reporting_Snapshot__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Opps_Reporting_Snapshots</relationshipName>
    <type>Lookup</type>
</CustomField>