force-app/main/default/objects/Opps_Reporting_Snapshot__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <description>Annual Opportunity Revenue - in USD</description>
    <label>Annual Opportunity Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>