force-app/main/default/objects/Opps_Reporting_Snapshot__c/fields/Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status__c</fullName>
    <description>Approval Status</description>
    <label>Approval Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>