force-app/main/default/objects/Opps_Reporting_Snapshot__c/fields/CloseDate__c.field-meta.xml
<CustomField>
    <fullName>CloseDate__c</fullName>
    <description>Expected Close Date</description>
    <label>Expected Close Date</label>
    <type>Date</type>
</CustomField>