force-app/main/default/objects/Opps_Reporting_Snapshot__c/fields/Corrugated_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Corrugated_Revenue__c</fullName>
    <description>Corrugated Revenue</description>
    <label>Corrugated Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>