force-app/main/default/objects/Opps_Reporting_Snapshot__c/fields/Customer_Selling_Margin_Rate__c.field-meta.xml
<CustomField>
    <fullName>Customer_Selling_Margin_Rate__c</fullName>
    <description>Customer Selling Margin Rate</description>
    <label>Customer Selling Margin Rate</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>