force-app/main/default/objects/Opps_Reporting_Snapshot__c/fields/Date_Approved__c.field-meta.xml
<CustomField>
    <fullName>Date_Approved__c</fullName>
    <description>Date Approved</description>
    <label>Date Approved</label>
    <type>Date</type>
</CustomField>