force-app/main/default/objects/Opps_Reporting_Snapshot__c/fields/Equipment_Packaging_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Packaging_Revenue__c</fullName>
    <description>Equipment Packaging Revenue</description>
    <label>Equipment Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>