force-app/main/default/objects/Opps_Reporting_Snapshot__c/fields/Estimated_Annual_Volume__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Annual_Volume__c</fullName>
    <description>Estimated Annual Volume</description>
    <label>Estimated Annual Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>