force-app/main/default/objects/Opps_Reporting_Snapshot__c/fields/Expected_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Expected_Revenue__c</fullName>
    <description>Forecasted (Expected) Revenue</description>
    <label>Forecasted Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>