force-app/main/default/objects/Opps_Reporting_Snapshot__c/fields/ExpectedRevenue__c.field-meta.xml
<CustomField>
    <fullName>ExpectedRevenue__c</fullName>
    <description>Expected Revenue</description>
    <label>Expected Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>