force-app/main/default/objects/Opps_Reporting_Snapshot__c/fields/Folding_Carton_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Folding_Carton_Revenue__c</fullName>
    <description>Folding Carton Revenue</description>
    <label>Folding Carton Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>