force-app/main/default/objects/Opps_Reporting_Snapshot__c/fields/Food_Packaging_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Food_Packaging_Revenue__c</fullName>
    <description>Food Packaging Revenue</description>
    <label>Food Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>