force-app/main/default/objects/Opps_Reporting_Snapshot__c/fields/FS_Equipment_Revenue__c.field-meta.xml
<CustomField>
    <fullName>FS_Equipment_Revenue__c</fullName>
    <description>Facilities Solutions Equipment Revenue</description>
    <label>FS Equipment Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>