force-app/main/default/objects/Opps_Reporting_Snapshot__c/fields/Go_Live_Date__c.field-meta.xml
<CustomField>
    <fullName>Go_Live_Date__c</fullName>
    <description>Go Live Date</description>
    <label>Go Live Date</label>
    <type>Date</type>
</CustomField>