force-app/main/default/objects/Opps_Reporting_Snapshot__c/fields/Load_Containment_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Load_Containment_Revenue__c</fullName>
    <description>Load Containment Revenue</description>
    <label>Load Containment Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>