force-app/main/default/objects/Opps_Reporting_Snapshot__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Parent Opportunity</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Opps_Reporting_Snapshots</relationshipName>
    <type>Lookup</type>
</CustomField>