force-app/main/default/objects/Opps_Reporting_Snapshot__c/fields/Opportunity_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Close_Date__c</fullName>
    <description>Opportunity Close Date</description>
    <label>Opportunity Close Date</label>
    <type>Date</type>
</CustomField>