force-app/main/default/objects/Opps_Reporting_Snapshot__c/fields/Opportunity_Segment__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Segment__c</fullName>
    <description>Opportunity Segment</description>
    <label>Opportunity Segment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Facility Solutions</fullName>
            </value>
            <value>
                <fullName>Logistics Solutions</fullName>
            </value>
            <value>
                <fullName>Packaging</fullName>
            </value>
            <value>
                <fullName>Print</fullName>
            </value>
            <value>
                <fullName>Publishing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>