force-app/main/default/objects/Opps_Reporting_Snapshot__c/fields/Opportunity_Type__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Type__c</fullName>
    <description>Opportunity Type</description>
    <label>Opportunity Type</label>
    <length>55</length>
    <type>Text</type>
</CustomField>