force-app/main/default/objects/Opps_Reporting_Snapshot__c/fields/OpportunityName__c.field-meta.xml
<CustomField>
    <fullName>OpportunityName__c</fullName>
    <formula>HYPERLINK(&quot;https://veritiv.lightning.force.com/lightning/r/Opportunity/&quot; &amp; Opportunity__c &amp; &quot;/view&quot;, Opportunity_Name__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OpportunityName</label>
    <type>Text</type>
</CustomField>