force-app/main/default/objects/Opps_Reporting_Snapshot__c/fields/Oppty_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Oppty_Record_Type__c</fullName>
    <description>Opportunity Record Type</description>
    <label>Oppty. Record Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>