force-app/main/default/objects/Opps_Reporting_Snapshot__c/fields/OwnerId__c.field-meta.xml
<CustomField>
    <fullName>OwnerId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Opportunity Owner</description>
    <label>Opportunity Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opps_Reporting_Snapshots</relationshipName>
    <type>Lookup</type>
</CustomField>