force-app/main/default/objects/Opps_Reporting_Snapshot__c/fields/Snapshot_Date__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Date__c</fullName>
    <defaultValue>today()</defaultValue>
    <description>Opportunity Snapshot Date</description>
    <label>Snapshot Date</label>
    <type>Date</type>
</CustomField>