force-app/main/default/objects/Opps_Reporting_Snapshot__c/fields/Snapshot_Month__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Month__c</fullName>
    <description>Snapshot Month Sequence (smallest value represents the most current snapshot month).</description>
    <inlineHelpText>Snapshot Month Sequence (smallest value represents the most current snapshot month).</inlineHelpText>
    <label>Snapshot Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>