force-app/main/default/objects/Opps_Reporting_Snapshot__c/fields/Snapshot_Week__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Week__c</fullName>
    <description>Sequential Snapshot Week</description>
    <inlineHelpText>Smallest value represents most recent week.</inlineHelpText>
    <label>Snapshot Week</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>