force-app/main/default/objects/Opps_Reporting_Snapshot__c/fields/StageName__c.field-meta.xml
<CustomField>
    <fullName>StageName__c</fullName>
    <description>Opportunity Stage</description>
    <label>Stage</label>
    <length>50</length>
    <type>Text</type>
</CustomField>