force-app/main/default/objects/Opps_Reporting_Snapshot__c/fields/Vendor_Segment__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Segment__c</fullName>
    <label>Vendor Segment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>