force-app/main/default/objects/Opps_Reporting_Snapshot__c/fields/Vendorsinfo__c.field-meta.xml
<CustomField>
    <fullName>Vendorsinfo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendor</label>
    <referenceTo>Vendor_Detail__c</referenceTo>
    <relationshipLabel>Opps_Reporting_Snapshots</relationshipLabel>
    <relationshipName>Opps_Reporting_Snapshots</relationshipName>
    <type>Lookup</type>
</CustomField>